syntax = "proto3";

import "google/protobuf/timestamp.proto";

package meta;

option go_package = "photobox-meta/proto";

service MetaService {
    rpc UploadMeta (UplodaMetaRequest) returns (MetaResponse);
    rpc GetMetaById (GetMetaByIdRequest) returns (MetaResponse);
    rpc GetMetaByUser (GetMetaByUserRequest) returns (GetMetaByUserResponse);
    rpc GetAllMeta (GetAllMetaRequest) returns (GetAllMetaResponse);
    rpc DeleteMetaById (DeleteMetaByIdRequest) returns (MetaResponse);
    rpc DeleteMetaByUser (DeleteMetaByUserRequest) returns (DeleteMetaByUserResponse);
    rpc UpdateMeta (UpdateMetaRequest) returns (MetaResponse);

    rpc GetFileByKey (GetFileByKeyRequest) returns (FileResponse);
}

message MetaResponse {
    string id = 1;
    string user_id = 2;
    string file_location = 3;
    string file_name = 4;
    int64 file_size = 5;
    string file_ext = 6;
    int32 file_width = 7;
    int32 file_height = 8;
    repeated Label labels = 9;
    google.protobuf.Timestamp file_last_modified = 10;
    google.protobuf.Timestamp created_at = 11;
}

message Label {
    string id = 1;
    string value = 2;
    string metadata_label_id = 3;
}

message UplodaMetaRequest {
    string user_id = 1;
    string filename = 2;
    bytes file = 3;
    int32 file_width = 4;
    int32 file_height = 5;
    optional google.protobuf.Timestamp file_last_modified = 6;
}

message GetMetaByIdRequest {
    string id = 1;
}

message GetMetaByUserRequest {
    string user_id = 1;
}

message GetMetaByUserResponse {
    repeated MetaResponse metas = 1;
}

message GetAllMetaRequest {}

message GetAllMetaResponse {
    repeated MetaResponse metas = 1;
}

message DeleteMetaByIdRequest {
    string id = 1;
}

message DeleteMetaByUserRequest {
    string user_id = 1;
}

message DeleteMetaByUserResponse {
    repeated MetaResponse deleted_metas = 1;
}

message UpdateMetaRequest {
    string user_id = 1;
    string file_name = 2;
}

message GetFileByKeyRequest {
    string user_id = 1;
    string key = 2;
}

message FileResponse {
    bytes file = 1;
}